# agni_robots

agni_description/: CMakeLists.txt  README.md  package.xml  script_gen_robot_config.py
agni_description/calibration/: color-qvga.xml  dc-qvga.xml  depth-qvga.xml  famula_cal.xml  famula_frame_cal.xml  famula_kuka_left_cal.xml  famula_shadow_hand_motor_right_cal.xml  kuka_cal.xml  kuka_frame_cal.xml  moveable_color-qvga.xml  moveable_depth-qvga.xml  moveable_famula_frame_cal.xml  myrmex_cal.xml  pa10_cal.xml  pa10_shadow_hand_muscle_left_cal.xml  poking_stick_cal.xml  sfb_cal.xml  sfb_frame_cal.xml  sfb_pa10_left_cal.xml  sfb_pa10_right_cal.xml  shadow_hand_muscle_cal.xml
agni_description/config/: kuka_shadow.rviz  la_kuka_trajectory_controller.yaml  left_hand_controller_gazebo.yaml  lh_hand_position_controller_gazebo.yaml  lh_hand_trajectory_controller.yaml  lh_hand_velocity_controller_gazebo.yaml  lh_tactile_sensor_controller.yaml  pa10_shadow.rviz  palm_baro.rviz  rh_hand_position_controller_gazebo.yaml  rh_hand_trajectory_controller.yaml  rh_tactile_sensor_controller.yaml  right_hand_controller_gazebo.yaml  schunk_hand_left_position_controller_gazebo.yaml  schunk_hand_left_trajectory_controller.yaml  schunk_hand_right_position_controller_gazebo.yaml  schunk_hand_right_trajectory_controller.yaml  shadow_motor_left_ati_fcs_position_controller_gazebo.yaml  shadow_motor_left_ati_position_controller_gazebo.yaml  shadow_motor_left_baro_trajectory_controller.yaml  shadow_motor_left_mixed_position_velocity_controller_gazebo.yaml  shadow_motor_left_position_controller_gazebo.yaml  shadow_motor_right_ati_position_controller_gazebo.yaml  shadow_motor_right_force_trajectory_controller.yaml  shadow_motor_right_force_trajectory_controller_gazebo.yaml  shadow_motor_right_mixed_position_velocity_controller_gazebo.yaml  shadow_motor_right_position_controller_gazebo.yaml  shadow_motor_right_tip_only_trajectory_controller.yaml  shadow_motor_right_velocity_controller_gazebo.yaml  tactile_display_both.rviz  tactile_display_both_fixed.rviz  tactile_display_both_human.rviz
agni_description/doc/: bimanual.md  bimanual_description.txt  hierarchy_map.dia  launch_description.txt  launch_map.dia  meta_components.txt  meta_driver_kuka.dia  meta_driver_shadow.dia  orocos.md  orocos_deployment
agni_description/flobi/: flobi-eye.urdf.xacro  flobiv2.urdf.xacro  flobiv3.urdf.xacro
agni_description/kuka/: ba_deploy.lua  cleanup_component.lua  controllers.yaml  controllers_left.yaml  controllers_right.yaml  deploy.lua  deploy_fake_la_kuka.lua  deploy_fake_ra_kuka.lua  deploy_famula_simple.lua  deploy_la_kuka.lua  deploy_la_moveto_controller.lua  deploy_la_tactileservo_controller.lua  deploy_meta_driver_kuka.lua  deploy_ra_kuka.lua  deploy_ra_tactileservo_controller.lua  kuka.lua  kuka.urdf.xacro  kuka_controller.lua  kuka_deploy.launch  kuka_includes.urdf.xacro  la_deploy.lua  la_deploy_component.lua  lwr.urdf.xacro  lwr_controllers.gazebo.xacro  lwr_jntposition_left.xml  lwr_jntposition_right.xml  meta_driver_kuka.lua  meta_driver_kuka_component.lua  meta_moveto_controller.lua  meta_moveto_controller_component.lua  meta_tactileservo_controller.lua  meta_tactileservo_controller_component.lua  ra_deploy.lua  ra_deploy_component.lua  undeploy_fake_la_kuka.lua  undeploy_fake_ra_kuka.lua  undeploy_la_kuka.lua  undeploy_la_moveto_controller.lua  undeploy_la_tactileservo_controller.lua  undeploy_ra_kuka.lua  (+2 more)
agni_description/launch/: README.md  arm.launch  arm_and_hand.launch  arm_hand_upload.launch  arm_tool_upload.launch  arm_trajectory_controllers.launch  arm_upload.launch  both_arm.launch  both_arm_and_hand.launch  both_arm_gazebo.launch  both_hand.launch  cage.launch  cageflobi.launch  famula.launch  gazebo_arm.launch  gazebo_arm_and_hand.launch  gazebo_robot_spawner.launch  hand.launch  hand_controllers.launch  hand_controllers_prefix.launch  hand_trajectory_controllers.launch  jsmerger.launch  kuka.launch  kukaR_bringup.launch  kuka_bringup.launch  left_arm.launch  left_arm_and_hand.launch  left_arm_and_hand_gazebo.launch  left_arm_gazebo.launch  left_hand.launch  left_hand_gazebo.launch  myrmex_board_placed.launch  pa10_bringup.launch  pa10_gazebo_bringup.launch  pa10_setup_upload.launch  pa10a_bringup.launch  platforms.launch  platforms_setup.launch  relaymerger.launch  right_arm.launch  (+31 more)
agni_description/models/: agni.world  ati_sensor.urdf.xacro  calibration_tool.urdf.xacro  myrmex_quick_mount.urdf.xacro  myrmex_tactile_surface.urdf.xacro  poking_stick.urdf  poking_stick.urdf.xacro  poking_stick_ubi.tactile.xacro  poking_stick_ubi.urdf.xacro  shadowhand.world  tactile_tool.urdf.xacro
agni_description/pa10/: la_gazebo_controller.yaml  ra_gazebo_controller.yaml
agni_description/robots/: README.md  arm_gazebo.urdf.xacro  arm_hand_gazebo.urdf.xacro  arms.urdf.xacro  arms_hands.urdf.xacro  bimanual.urdf.xacro  both_kuka_poking_myrmex.urdf.xacro  both_kuka_shadow_flobi.urdf.xacro  calibration_tool.urdf.xacro  fake_sdh_cup.urdf.xacro  famula.urdf.xacro  frame.urdf.xacro  hands.urdf.xacro  kuka_anytool.urdf.xacro  kuka_arm.urdf.xacro  kuka_gazebo.urdf.xacro  kuka_shadow.urdf.xacro  la_kuka_gazebo.urdf.xacro  la_pa10_gazebo.urdf.xacro  left_kuka_myrmex.urdf.xacro  left_kuka_shadow.urdf.xacro  left_kuka_shadow_gazebo.urdf.xacro  left_kuka_shadow_prefix_gazebo.urdf.xacro  left_myrmex_ee.urdf.xacro  left_pa10_shadow.urdf.xacro  left_poking_stick_ee.urdf.xacro  left_poking_stick_ubi_ee.urdf.xacro  left_shadow_motor_ee.urdf.xacro  left_shadow_muscle_ee.urdf.xacro  lh_ubi_motor_hand.urdf.xacro  lh_ubi_motor_hand_prefix.urdf.xacro  moveable_famula.urdf.xacro  myrmex.urdf.xacro  myrmex_ati.urdf.xacro  myrmex_board.urdf.xacro  myrmex_ee.urdf.xacro  pa10_anytool.urdf.xacro  pa10_arm.urdf.xacro  pa10_gazebo.urdf.xacro  pa10_right.urdf.xacro  (+34 more)
agni_robot_viz/: CMakeLists.txt  package.xml
agni_robots/: CMakeLists.txt  package.xml
agni_rtt_rosdeployment/: CMakeLists.txt  package.xml
agni_rtt_services/: CMakeLists.txt  package.xml
myrmex_description/: CMakeLists.txt  README.md  package.xml
(+338 files in other folders)
