<?xml version="1.0"?>
<package>
  <name>agni_robot_viz</name>
  <version>0.0.1</version>
  <description>Robot visualization tools like markers for the collision geometries</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume WALCK</maintainer>
  <license>BSD</license>
  <author>Guillaume WALCK</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
   <build_depend>tf_conversions</build_depend>
  
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
