<package>
  <name>agni_rtt_rosdeployment</name>
  <version>2.8.1</version>
  <description>derived from rtt_rosdeployment to provides an RTT plugin to control an ocl LUA deployment component over ROS service calls.</description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_ros_integration</url>
  <url type="bugtracker">https://github.com/orocos/rtt_ros_integration/issues</url>
  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>
  <author email="jbo@jhu.edu">Jonthan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_ros_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <!--
        rtt_ros_msgs is not an RTT plugin
        <plugin_depend>rtt_ros_msgs</plugin_depend>
      -->
    </rtt_ros>
  </export>
</package>
