<package>
  <name>agni_rtt_services</name>
  <version>2.8.1</version>
  <description>controller services to be added to components </description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <author email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rtt</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>rtt_roscomm</build_depend> 
  <build_depend>rtt_controller_manager_msgs</build_depend> 
  <build_depend>message_generation</build_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_controller_manager_msgs</run_depend> 
  <run_depend>message_runtime</run_depend>
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_controller_manager_msgs</plugin_depend>
      <!--
        rtt_ros_msgs is not an RTT plugin
        <plugin_depend>rtt_ros_msgs</plugin_depend>
      -->
    </rtt_ros>
  </export>
</package>
