<?xml version="1.0"?>
<package>
  <name>myrmex_description</name>
  <version>0.1.0</version>
  <description>URDF description of the tactile sensor array</description>

  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

</package>
